pressa-tui/tests/snapshots/shell_snapshots__frame_a_home.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 100
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa ──────────────────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │                                                         │"
"│                    │                                                         │"
"│ > Posts            │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │              Select a collection to begin.              │"
"│                    │                                                         │"
"│                    │                 blog-cms · 1 collection                 │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Open   q Quit                                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
