pressa-tui/tests/snapshots/shell_snapshots__frame_b_home_with_three_collections.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 106
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa ──────────────────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │                                                         │"
"│                    │                                                         │"
"│ > Posts            │                                                         │"
"│   Authors          │                                                         │"
"│   Categories       │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │              Select a collection to begin.              │"
"│                    │                                                         │"
"│                    │                blog-cms · 3 collections                 │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Open   q Quit                                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
