pressa-tui/tests/snapshots/shell_snapshots__frame_c_home_after_two_move_downs.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 114
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa ──────────────────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │                                                         │"
"│                    │                                                         │"
"│   Posts            │                                                         │"
"│   Authors          │                                                         │"
"│ > Categories       │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │              Select a collection to begin.              │"
"│                    │                                                         │"
"│                    │                blog-cms · 3 collections                 │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Open   q Quit                                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
