pressa-tui/tests/snapshots/shell_snapshots__frame_d_home_with_an_error_status.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 124
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa ──────────────────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │                                                         │"
"│                    │                                                         │"
"│ > Posts            │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │              Select a collection to begin.              │"
"│                    │                                                         │"
"│                    │                 blog-cms · 1 collection                 │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│ ⚠ unknown collection: drafts                                                 │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Open   q Quit                                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
