pressa-tui/tests/snapshots/shell_snapshots__frame_e_home_at_the_minimum_size.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 130
expression: "draw(60, 16, &state).backend()"
---
"┌ pressa ──────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────┤"
"│ Collections        │                                     │"
"│                    │                                     │"
"│ > Posts            │                                     │"
"│                    │    Select a collection to begin.    │"
"│                    │                                     │"
"│                    │       blog-cms · 1 collection       │"
"│                    │                                     │"
"│                    │                                     │"
"│                    │                                     │"
"├────────────────────┴─────────────────────────────────────┤"
"│                                                          │"
"├──────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Open   q Quit                        │"
"└──────────────────────────────────────────────────────────┘"
