pressa-tui/tests/snapshots/shell_snapshots__frame_f_sidebar_scrolled_to_the_last_of_twenty.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 141
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa ──────────────────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │                                                         │"
"│                    │                                                         │"
"│ ↑ 6 more           │                                                         │"
"│   Coll 07          │                                                         │"
"│   Coll 08          │                                                         │"
"│   Coll 09          │                                                         │"
"│   Coll 10          │                                                         │"
"│   Coll 11          │              Select a collection to begin.              │"
"│   Coll 12          │                                                         │"
"│   Coll 13          │            many-collections · 20 collections            │"
"│   Coll 14          │                                                         │"
"│   Coll 15          │                                                         │"
"│   Coll 16          │                                                         │"
"│   Coll 17          │                                                         │"
"│   Coll 18          │                                                         │"
"│   Coll 19          │                                                         │"
"│ > Coll 20          │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ ↑↓ Navigate   Enter Open   q Quit                                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
