pressa-tui/tests/snapshots/shell_snapshots__frame_g_at_40x10.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 147
expression: "draw(40, 10, &state).backend()"
---
"                                        "
"                                        "
"                                        "
"                                        "
"           terminal too small           "
"       needs 60x16, this is 40x10       "
"                                        "
"                                        "
"                                        "
"                                        "
