pressa-tui/tests/snapshots/shell_snapshots__frame_g_at_80x15.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 148
expression: "draw(80, 15, &state).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                               terminal too small                               "
"                           needs 60x16, this is 80x15                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
