pressa-tui/tests/snapshots/shell_snapshots__frame_h_list_route.snap
---
source: pressa-tui/tests/shell_snapshots.rs
assertion_line: 157
expression: "draw(80, 24, &state).backend()"
---
"┌ pressa › Posts ──────────────────────────────────────────────────────────────┐"
"├────────────────────┬─────────────────────────────────────────────────────────┤"
"│ Collections        │                                                         │"
"│                    │                                                         │"
"│ > Posts            │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │              The list view arrives in T8.               │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"│                    │                                                         │"
"├────────────────────┴─────────────────────────────────────────────────────────┤"
"│                                                                              │"
"├──────────────────────────────────────────────────────────────────────────────┤"
"│ Esc Back                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
